# gltf_viewer

./: CMakeLists.txt  README.md  main.cpp
toy_render/: CMakeLists.txt  const.h  main.cpp  util.h
toy_render/cameras/: camera.h
toy_render/controls/: controls.h
toy_render/geometries/: geometry.h
toy_render/loaders/: load_gltf.cpp  load_gltf.h
toy_render/math/: aabb.h  euler.h  matrix.h  quaternion.h  vector.h
toy_render/scene/: scene.cpp  scene.h
toy_render/supports/tinygltf/: stb_image_write.h
